backend/deploy/k8s/services/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-web
  namespace: blog
spec:
  ingressClassName: traefik
  rules:
    - host: b022mc.cn
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blog-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: www.b022mc.cn
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blog-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
